# datatrails-python

./: .buildinfo  .env.tools  .gitattributes  .gitignore  BUILDING.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile-builder  LICENSE  README.md  README.rst  Taskfile.yml  Taskfile_dev.yml  access_policies_filter.html  access_policy_create.html  applications_registration.html  archivist.html  assets.html  attachments.html  compliance_policies_demo.html  compliance_policies_demo_dynamic_tolerance.html  compliance_policies_demo_richness.html  compliance_policies_since.html  create_asset.html  create_event.html  dynamic_tolerance_story.yaml  errors.html  events.html  example-commit  features.html  filter_assets.html  filter_events.html  filter_publicevents.html  fixtures.html  genindex.html  get_asset.html  get_publicasset.html  get_publicevent.html  (+30 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.jupyter/: jupyter_notebook_config.py  migrated
_modules/: index.html
_sources/: access_policy_create.rst.txt  assets.rst.txt  compliance_policies_demo.rst.txt  compliance_policies_demo_dynamic_tolerance.rst.txt  create_asset.rst.txt  create_event.rst.txt  errors.rst.txt  features.rst.txt  fixtures.rst.txt  getting_started.rst.txt  index.rst.txt  logger.rst.txt  proof_mechanism.rst.txt  sbom.rst.txt  timestamp.rst.txt
_static/: documentation_options.js
archivist/: .gitignore  __init__.py  access_policies.py  appidp.py  applications.py  archivist.py  archivistpublic.py  asset.py  assetattachments.py  assets.py  attachments.py  compliance.py  compliance_polices.py  compliance_policies.py  compliance_policy_requests.py  compliance_policy_type.py  composite.py  confirm.py  confirmation_status.py  confirmer.py  constants.py  dictmerge.py  errors.py  events.py  headers.py  locations.py  logger.py  or_dict.py  parser.py  proof_mechanism.py  publicassets.py  publicevents.py  publisher.py  retry429.py  runner.py  sbommetadata.py  sboms.py  storage_integrity.py  subjects.py  subjects_confirmer.py  (+6 more)
code/: archivist.html  assets.html  attachments.html  errors.html  events.html  index.html  locations.html  proof_mechanism.html  runner.html  tenancies.html  timestamp.html
compliance_policies/: compliance.html  compliance_policies.html  compliance_policies_type.html  compliance_policy_requests.html  index.html
docs/: Makefile  access_policies_filter.rst  access_policy_create.rst  applications_registration.rst  archivist.rst  attachments.rst  compliance_policies_demo_dynamic_tolerance.rst  compliance_policies_demo_richness.rst  compliance_policies_since.rst  conf.py  create_asset.rst  create_event.rst  errors.rst  events.rst  features.rst  filter_assets.rst  filter_events.rst  filter_publicevents.rst  fixtures.rst  get_asset.rst  get_publicasset.rst  get_publicevent.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  locations.rst  logger.rst  notebooks.rst  proof_mechanism.rst  publicevents.rst  readthedocs.yaml  requirements.txt  sbom.xml  scan_test.rst  sharing_asset.rst  (+4 more)
(+470 files in other folders)
