[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E713, E722, E741, W503, W504, 
statistics = True
max-line-length = 88

[metadata]
name = jitsuin-archivist
author = RKVST Inc.
author_email = support@rkvst.com
description = RKVST Client
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jitsuin-inc/archivist-python
license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Utilities

project_urls =
    Documentation = https://python.rkvst.com
    Source = https://github.com/jitsuin-inc/archivist-python
    Tracker = https://github.com/jitsuin-inc/archivist-python/issues

[options]
install_requires = file: requirements.txt
packages = archivist
platforms = any
python_requires = >=3.7
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts =
    archivist_runner = archivist.cmds.runner.main:main
    archivist_template = archivist.cmds.template.main:main

[bdist_wheel]
universal = 1
