[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E704, E713, E722, E741, W503
statistics = True
max-line-length = 88

[metadata]
name = datatrails-archivist
author = DataTrails Inc.
author_email = support@datatrails.ai
description = DataTrails API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/datatrails/datatrails-python
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Topic :: Utilities

project_urls =
    Documentation = https://python.datatrails.ai
    Source = https://github.com/datatrails/datatrails-python
    Tracker = https://github.com/datatrails/datatrails-python/issues

[options]
install_requires = file: requirements.txt
packages = 
    archivist
    archivist.cmds
    archivist.cmds.runner
    archivist.cmds.template

include_package_data = True
platforms = any
python_requires = >=3.8
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts =
    archivist_runner = archivist.cmds.runner.main:main
    archivist_template = archivist.cmds.template.main:main

[bdist_wheel]
universal = 1
